--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "framer-motion": "^6.2.8",
-    "next": "12.0.7",
+    "next": "^12.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-qr-code": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
